lab-ingress/hello-kubernetes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: crunchydevops.com
    http:
      paths:
      - path: /
        pathType:  Prefix
        backend:
          service:
            name: hello-kubernetes-first
            port:
              number: 80
  - host: crunchydevops2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-kubernetes-second
            port:
              number: 80
